<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UpdateActivity">

    <ImageButton
        android:onClick="imBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/keyboard_arrow_left_colorful2"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/txvText"
        android:layout_alignStart="@id/edtIdLayoutUpdt"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="100dp"
        android:textColor="@color/pinkish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtUpdt"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtIdLayoutUpdt"
        android:layout_below="@+id/txvText"
        android:layout_centerHorizontal="true"
        android:theme="@style/TextLabel"
        android:layout_marginTop="50dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/id"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:counterMaxLength="30"
        app:boxStrokeColor="@color/pink"
        app:boxStrokeWidth="4dp"
        app:boxStrokeWidthFocused="4dp"
        app:boxBackgroundColor="#222222"
        app:counterTextColor="@color/deepGrey"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:enabled="false"
            android:id="@+id/edtIdUpdt"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:background="#97E18AB2"
            android:textColor="#492435"
            android:inputType="text|textNoSuggestions|textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtProductLayoutUpdt"
        android:layout_below="@+id/edtIdLayoutUpdt"
        android:layout_centerHorizontal="true"
        android:theme="@style/TextLabel"
        android:layout_marginTop="20dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/product"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:boxStrokeColor="@color/pink"
        app:boxStrokeWidth="4dp"
        app:boxStrokeWidthFocused="4dp"
        app:boxBackgroundColor="#222222"
        app:counterTextColor="@color/deepGrey"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameUpdt"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:background="#57E18AB2"
            android:inputType="text|textNoSuggestions|textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPriceLayoutUpdt"
        android:layout_below="@+id/edtProductLayoutUpdt"
        android:layout_centerHorizontal="true"
        android:theme="@style/TextLabel"
        android:layout_marginTop="20dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:boxStrokeColor="@color/pink"
        app:boxStrokeWidth="4dp"
        app:boxStrokeWidthFocused="4dp"
        app:boxCornerRadiusTopStart="3dp"
        app:boxCornerRadiusTopEnd="3dp"
        app:boxBackgroundColor="#222222"
        app:counterTextColor="@color/deepGrey"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPriceUpdt"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:background="#57E18AB2"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:background="@color/pinkish"
        android:textColor="@android:color/white"
        android:onClick="btnUpdate"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:text="@string/editar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-6dp"/>

</RelativeLayout>