<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoveryPasswordActivity">

    <RelativeLayout
        android:id="@+id/rlContainerFather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlContainer"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/pinkish">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                android:layout_centerInParent="true"/>

            <ImageButton
                android:onClick="imBack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/keyboard_arrow_left_colorful2"
                android:background="@android:color/transparent"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/rlContainer"
            android:background="@drawable/ic_wave2"
            android:elevation="10dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/txvRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlContainerFather"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/textRecovery"/>

    <EditText
        android:id="@+id/edtRecoveryEmail"
        android:textColor="@color/black"
        android:hint="@string/edtRec01"
        android:textColorHint="#B6B6B6"
        android:backgroundTint="#B6B6B6"
        android:textStyle="bold"
        android:layout_width="285dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txvRecovery"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions|textEmailAddress"
        android:paddingBottom="20dp"
        tools:ignore="TextFields"/>

    <RelativeLayout
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRecoveryEmail"
        android:layout_alignStart="@+id/edtRecoveryEmail"
        android:layout_alignEnd="@+id/edtRecoveryEmail">

        <TextView
            android:id="@+id/txvRememberedPassword"
            android:onClick="txvRemembered"
            android:paddingVertical="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:text="@string/remembered_password"
            android:textColor="#8E8E8E"/>

        <ImageButton
            android:id="@+id/ibRecovery"
            android:onClick="ibRecovery"
            android:background="@drawable/circle"
            android:src="@drawable/ic_arrow_right"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true">
        </ImageButton>

    </RelativeLayout>

</RelativeLayout>