<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOTPActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlContainerFather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlContainer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/blueDif"/>

            <ImageButton
                android:id="@+id/imBack"
                android:onClick="imBack"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/keyboard_arrow_left_colorful"
                android:background="@android:color/transparent"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/rlContainer"
                android:background="@drawable/ic_wave3"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_message2"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/txvOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlContainerFather"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/textOTPCheck"/>

        <TextView
            android:id="@+id/txvOTPDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txvOTP"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:textAlignment="center"
            tools:text="Enter the code sent to: (11) 957648755"/>

        <LinearLayout
            android:id="@+id/llContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txvOTPDesc"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/txvCode1"
                android:textAlignment="center"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2.5dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/txvCode2"
                android:textAlignment="center"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2.5dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/txvCode3"
                android:textAlignment="center"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2.5dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/txvCode4"
                android:textAlignment="center"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2.5dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/txvCode5"
                android:textAlignment="center"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2.5dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/txvCode6"
                android:textAlignment="center"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2.5dp"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llContainerResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/llContainer"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codeNull"/>

            <TextView
                android:onClick="txvResendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/resend_code"
                android:textStyle="bold"
                android:textColor="@color/pinkish"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/llContainerResend"
            android:layout_alignEnd="@id/llContainerResend"
            android:layout_below="@id/llContainerResend"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:paddingVertical="5dp">

            <Button
                android:id="@+id/btnVerifyCode"
                android:onClick="btnVerifyCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradient"
                android:text="@string/verify"
                android:elevation="10dp"/>

            <ProgressBar
                android:id="@+id/pbVerifyingOPT"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

    </RelativeLayout>

</ScrollView>